add bottom panel

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         <button type="button" class="btn btn-dark google"> <img class="google-img" src="./img/Google.png" alt="Google"> Or sign-in with google</button>
                     </div>
                 </div>
+                <div class="account">Dont have an account? <a href="#" class="join">Join free today</a></div>
             </div>
         </div>
     </div>
